# Projeto-bufalos

./: .gitignore  AGENTS.md  PLANO_REESTRUTURACAO_NOTEBOOKS_04_05.md  README.md  avaliar.ipynb  config.e2e.toml  config.py  config.test.toml  config.toml  converter_gt_referencia.ipynb  indice_loader.py  path_utils.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt  runtime_config.py  sample.ipynb  script.ipynb  setup.ipynb
.github/workflows/: ci.yml
docs/: CHOICES.md  TRYLATER.md  ci.md  evaluation-system.md  image-tags.md  testing.md
docs/avaliacao/: estabilidade-entre-execucoes.md  sistema-de-avaliacao.md  tags-de-imagem.md
docs/decisoes-tecnicas/: analise-da-segmentacao-binarizada-por-execucao-fixa.md  binarizacao-ground-truth-com-threshold-global.md  e2e-com-saidas-persistentes.md  escolha-da-metrica-auprc.md  escolha-da-metrica-brier-score.md  escolha-da-metrica-soft-dice.md  execucoes-multiplas-para-avaliar-estabilidade.md  formato-das-mascaras.md  mascaras-do-rembg.md  u2net-cloth-seg.md
docs/guias/: ci.md  documentacao-do-repositorio.md  guia-do-projeto.md  testes.md
docs/metricas/: auprc.md  brier-score.md  soft-dice.md
models/: avaliacao.py  indice_linha.py  mascara.py
notebooks/: 01_geracao_mascaras_e_segmentacao.ipynb  02_avaliacao_das_segmentacoes.ipynb  02_binarizacao_mascaras.ipynb  03_avaliacao_das_segmentacoes.ipynb  03_calculo_das_avaliacoes.ipynb  04_analise_das_avaliacoes.ipynb  04_analise_estatistica_segmentacao_bruta.ipynb  05_visualizacao_segmentacao_bruta.ipynb  06_analise_estatistica_segmentacao_binarizada.ipynb  07_visualizacao_segmentacao_binarizada.ipynb  avaliar.ipynb  script.ipynb  selecao_metodo_binarizacao.ipynb
scripts/: regenerate_mock_avaliacao_sqlite.py
src/: config.py  config.toml
src/analysis/: __init__.py  bootstrap.py  collector.py  descriptive_stats.py  persistence.py  ranker.py  stability.py  statistical_tests.py
src/binarizacao/: __init__.py  binarizacao_base.py  pipeline.py  registro.py
src/controllers/: __init__.py  avaliacao_controller.py  binarizacao_controller.py  imagem_controller.py  segmentacao_controller.py
src/io/: indice_db.py  indice_loader.py  mask_utils.py  path_resolver.py  path_utils.py
src/logs/: __init__.py  avaliacao.py  avaliacao_logs.py  binarizacao.py  binarizacao_logs.py  (+3 more)
tests/: config.toml  conftest.py  mock_config.py
(+175 files in other folders)
